# inkscape-raytracing

./: .gitignore  .pre-commit-config.yaml  README.md  lens.inx  lens.py  pyproject.toml  ray_tracing.inx  ray_tracing.py  render_raytracing.inx  render_raytracing.py  requirements.txt  set_material.inx  set_material.py  utils.py
docs/source/: conf.py  index.rst  intro.rst  structure.rst
inkscape_raytracing/: __init__.py  desc_parser.py  lens.inx  lens.py  render.inx  render.py  set_material.inx  set_material.py  utils.py
inkscape_raytracing/inkex/: __init__.py  base.py  bezier.py  colors.py  command.py  deprecated.py  extensions.py  inkscape_env.py  inx.py  paths.py  ports.py  properties.py  styles.py  transforms.py  turtle.py  tween.py  units.py  utils.py
inkscape_raytracing/inkex/elements/: __init__.py  _base.py  _filters.py  _groups.py  _meta.py  _polygons.py  _selected.py  _svg.py  _text.py  _use.py  _utils.py
inkscape_raytracing/inkex/tester/: filters.py  (+5 more)
inkscape_raytracing/raytracing/: __init__.py  optical_object.py  ray.py  shade.py  vector.py  world.py
raytracing/: __init__.py  ray.py  shade.py  world.py
raytracing/geometry/: __init__.py  cubic_bezier.py  geometric_object.py
raytracing/material/: __init__.py  beamdump.py  beamsplitter.py  glass.py  mirror.py  optic_material.py
tests/: test_beam.py  test_geometry_bezier.py  test_material_glass.py
tests/integration/: test_beam.py  test_material_beamsplitter.py  test_material_glass.py  test_material_mirror.py
tests/unit/: test_aabbox.py  test_cubic_bezier.py  test_cubic_equation.py  test_geometry_bezier.py
(+22 files in other folders)
